# design_patterns

adapter/: notes.md
adapter/cpp/: main.cpp
bridge/: notes.md
bridge/cpp/bridge/: main.cpp
bridge/cpp/pimpl-idiom/: person.cpp  person.h
builder/: builder.md
builder/cpp/: builder.cpp  fluent-builder.cpp
builder/cpp/builder-facets/: Facets.cpp
builder/cpp/gang-of-four-builder-example/: budgettour.cpp  budgettour.h  (+6 more)
chain-of-responsibility/: notes.md
chain-of-responsibility/cpp/: broker-chain.cpp  old-style-chain.cpp
command/: notes.md
command/cpp/: CMakeLists.txt  bankaccount.cpp  composite-command.cpp
composite/: notes.md
decorator/: notes.md
facade/: notes.md
factory/: notes.md
factory/cpp/: concrete-factory.cpp  factory-method.cpp  inner-factory.cpp
factory/cpp/abstract-factory/: CMakeLists.txt  coffeefactory.cpp  drinkfactory.h  tea.h  teafactory.cpp  teafactory.h
flyweight/: notes.md
flyweight/cpp/: boost-flyweight.cpp  handmade-flyweight.cpp  text-formatting.cpp
interpreter/: notes.md
interpreter/cpp/: CMakeLists.txt  lexing-and-parsing.cpp
iterator/: notes.md
iterator/cpp/: CMakeLists.txt  binary-tree-iterator.cpp  boost-iterator-facade.cpp  std-iterators.cpp
mediator/: notes.md
memento/: notes.md
observer/: notes.md
prototype/: notes.md
proxy/: notes.md
proxy/cpp/: property-proxy.cpp  virtual-proxy.cpp
singleton/: notes.md
specification/cpp/: main.cpp  specificationPattern.cpp
state/: notes.md
strategy/: notes.md
template-method/: notes.md
template-method/cpp/: main.cpp
visitor/: notes.md
(+79 files in other folders)
